sna: Reuse any output not explicitly disconnected

References: https://bugs.freedesktop.org/show_bug.cgi?id=77768
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>